# Lab0-MLOPS

./: .coverage  pyproject.toml
src/: cli.py  preprocessing.py
tests/: test_cli.py  test_logic.py
