[project]
name = "lab0"
version = "0.1.0"
description = "Assigment: Lab0 subject MlOps in the master of machine learning "
authors = [
    { name = "Andres Malon Insausti", email = "andresmalon@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "click>=8.3.0",
    "pylint>=4.0.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
